Update github repository

--- a/index.html
+++ b/index.html
@@ -40,5 +40,10 @@
     </div>
 	<div class="nothing" ng-if="search.count==0">&#8618; Nothing found.</div>
    </div>
+   
+  <div id="github">
+	Source code repository: <a href="https://github.com/svicente99/AngularJS-Week3-solution" target="_new">
+	Visit the Github project</a>
+  </div>   
 </body>
 </html>
